Updated EnvironmentConfigLoader to create backups only before persisting changes
Moved command validation from execution to object creation; Updated interfaces to return command execution code; Updated main method to have System.exit outside try-with-resoursees block to ensure close method is called properly